AutoScroll Functionality Added  - Carousel will scroll automatically after a specified time  - If the user navigates the carousel (jumping or scrolling) the timer    will reset to prevent scrolling too soon.

--- a/src/styles.css
+++ b/src/styles.css
@@ -62,8 +62,7 @@
 }
 
 .carousel-list-element,
-.carousel-element,
-.carousel-element img {
+.carousel-element {
   width: 100%;
 }
 
@@ -76,9 +75,15 @@
   display: flex;
   height: 600px;
   width: 500%;
+  right: 0;
   position: relative;
   z-index: 0;
   transition: 0.5s ease-in-out;
+}
+
+.carousel-element img {
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .carousel-nav {
@@ -87,7 +92,7 @@
   height: 100%;
   top: 0;
   z-index: 100;
-  color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255, 0.5);
   user-select: none;
   -webkit-user-select: none;
 }
@@ -98,19 +103,49 @@
   font-size: 2.5rem;
   text-align: center;
   line-height: 45px;
-  border-radius: 50%;
+
   width: 50px;
   height: 50px;
-  background-color: rgba(255, 255, 255, 0.3);
+  top: calc(50% - 25px);
+
   cursor: pointer;
+  transition: 0.2s;
+}
+
+.nav-btn:hover {
+  color: white;
 }
 
 .nav-left {
   left: 10px;
-  top: calc(50% - 25px);
 }
 
 .nav-right {
   right: 10px;
-  top: calc(50% - 25px);
+}
+
+.nav-index {
+  display: flex;
+  position: absolute;
+  bottom: 10px;
+  width: 200px;
+  left: calc(50% - 100px);
+}
+
+.nav-index-element {
+  box-sizing: border-box;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: solid 2.5px rgba(255, 255, 255, 0.5);
+  transition: 0.5s;
+  margin: 0 5px;
+}
+
+.nav-index-element.active {
+  border: solid 7.5px rgba(255, 255, 255, 0.5);
+}
+
+.nav-index-element:hover:not(.active) {
+  border: solid 7.5px white;
 }
